Updated README file

--- a/README
+++ b/README
@@ -24,9 +24,8 @@ Current Status:
 
     Need to changed as English pdf to Tamil pdf.
 
-    Note: It has many grammar issues while translate. and this is translated by http://translate.google.com/
+    Note: It has many grammar mistakes while translating. and this is translated to tamil by http://translate.google.com/
 
-    Code was in github account : https://github.com/sathia27/Translate-script
 
     If you like to start working in this code. You can take code form github acconut.
 
